src/objects/Invoice_Line__c.object
<CustomObject>
    <description>The line items on Invoices, such as products etc.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accounting_Code__c</fullName>
        <label>Revenue Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingPeriod__c</fullName>
        <formula>If(Job_Rate_Plan_Charge__c != null ,
TEXT( Job_Rate_Plan_Charge__r.Price_Type__c ) ,
IF ( Service_End_Date__c - Service_Start_Date__c &gt; 183,
&apos;Annual&apos;,
IF(Service_End_Date__c - Service_Start_Date__c &lt; 29,
&apos;One Time&apos;,
&apos;Half Yearly &apos;
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculated_Quantity__c</fullName>
        <description>This indicates the actual number of times the charge is being applied for the line. If you bill a monthly invoice for 45 days this value will be 1.5</description>
        <inlineHelpText>This indicates the actual number of times the charge is being applied for the line. If you bill a monthly invoice for 45 days this value will be 1.5</inlineHelpText>
        <label>Calculated Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charge_Date__c</fullName>
        <description>This is the date on which Invoice Line is Created</description>
        <label>Charge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Charge_End_for_Conga__c</fullName>
        <formula>TEXT( Service_End_Date__c ) &amp; &quot; 12:00 AM&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Charge End for Conga</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Safe_Id__c</fullName>
        <formula>CASESAFEID(Job_Rate_Plan_Charge__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Charge Safe Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Start_for_Conga__c</fullName>
        <formula>TEXT(Service_Start_Date__c) &amp; &quot; 12:00 AM&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Charge Start for Conga</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commissionable_Product__c</fullName>
        <formula>Product__r.Commissionable_Product__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commissionable Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Year__c</fullName>
        <formula>CEILING((( Service_Start_Date__c -
Job_Rate_Plan_Charge__r.Service_Activation_Date__c))/363)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Line_Amount__c</fullName>
        <description>System use only, please do not amend</description>
        <inlineHelpText>System use only, please do not amend</inlineHelpText>
        <label>Credited Line Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Import__c</fullName>
        <formula>Text(Invoice__r.Data_Import__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Import</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deferred_Revenue_Accounting_Code__c</fullName>
        <label>Deferred Revenue Account</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Value__c</fullName>
        <description>The discount value to be applied on the subtotal.</description>
        <inlineHelpText>The discount value to be applied on the subtotal.</inlineHelpText>
        <label>Discount Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Error_Reason_for_Revenue_Recognition__c</fullName>
        <label>Error Reason for Revenue Recognition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Grouped_Quantity__c</fullName>
        <label>Grouped Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IIT_Invoice_Cancellation_reason__c</fullName>
        <label>IIT_Line Cancellation reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Wrong Invoice Line</fullName>
                </value>
                <value>
                    <fullName>Invalid date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Date_ref__c</fullName>
        <formula>Invoice__r.Invoice_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Date (ref)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_State__c</fullName>
        <formula>TEXT(Invoice__r.Invoice_State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>Invoice_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Job_Rate_Plan_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Rate Plan Charge</label>
        <referenceTo>Job_Rate_Plan_Charge__c</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job__c</fullName>
        <label>Order</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>Invoice_Lines</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Legal_Entity_ref__c</fullName>
        <formula>Invoice__r.Legal_Entity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legal Entity (ref)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Amount__c</fullName>
        <description>Quantity * Unit Price</description>
        <inlineHelpText>Quantity * Unit Price</inlineHelpText>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Line_Name__c</fullName>
        <label>Line Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Safe_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Line 18-char ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Order_Billing_City__c</fullName>
        <formula>IF ( Job__r.Master_Order__c = NULL, Job__r.BillingCity__c ,Job__r.Master_Order__r.BillingCity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master Order Billing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Order_Billing_Country__c</fullName>
        <formula>IF ( Job__r.Master_Order__c = NULL, Job__r.BillingCountry__c ,Job__r.Master_Order__r.BillingCountry__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master Order Billing Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Order_Billing_Postal_Code__c</fullName>
        <formula>IF ( Job__r.Master_Order__c = NULL, Job__r.BillingPostalCode__c ,Job__r.Master_Order__r.BillingPostalCode__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master Order Billing Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Order_Billing_State__c</fullName>
        <formula>IF ( Job__r.Master_Order__c = NULL, Job__r.BillingState__c ,Job__r.Master_Order__r.BillingState__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master Order Billing State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Order_Billing_Street__c</fullName>
        <formula>IF ( Job__r.Master_Order__c = NULL, Job__r.BillingStreet__c ,Job__r.Master_Order__r.BillingStreet__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master Order Billing Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Order_Customer_VAT_Number__c</fullName>
        <formula>IF( Job__r.Master_Order__c = Null, Job__r.Account__r.VAT_No__c , Job__r.Master_Order__r.Account__r.VAT_No__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master Order Customer VAT Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Total__c</fullName>
        <formula>Line_Amount__c - Discount_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Of_Days_B_W_Charge_Date__c</fullName>
        <description>Number of days between the Charge start date and Charge end date.</description>
        <formula>Service_End_Date__c - Service_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days between the Charge start date and Charge end date.</inlineHelpText>
        <label>No Of Days B/W Charge Dates</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderCommissionBatch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OrderCommissionBatch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderLegalEntity__c</fullName>
        <formula>TEXT(Job__r.Legal_Entity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OrderLegalEntity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <formula>Job__r.Customer_Purchase_Order_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PO Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Type__c</fullName>
        <description>The frequency at which the charge will be billed (One Time, Monthly, Quarterly, Annual etc)</description>
        <inlineHelpText>The frequency at which the charge will be billed (One Time, Monthly, Quarterly, Annual etc)</inlineHelpText>
        <label>Price Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Price_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricing_Model__c</fullName>
        <description>This will specify whether price is Default Type or Tiered Type.</description>
        <inlineHelpText>This will specify whether price is Default Type or Tiered Type.</inlineHelpText>
        <label>Pricing Model</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Pricing_Model</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Rate_Plan_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Rate Plan Charge</label>
        <referenceTo>Product_Rate_Plan_Charge__c</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remove_Non_Prorated__c</fullName>
        <formula>If(No_Of_Days_B_W_Charge_Date__c != 364.00 &amp;&amp;
No_Of_Days_B_W_Charge_Date__c != 365.00 &amp;&amp;
No_Of_Days_B_W_Charge_Date__c != 180.00 &amp;&amp;
No_Of_Days_B_W_Charge_Date__c != 181.00 &amp;&amp;
No_Of_Days_B_W_Charge_Date__c != 182.00 &amp;&amp;
No_Of_Days_B_W_Charge_Date__c != 183.00 &amp;&amp;
No_Of_Days_B_W_Charge_Date__c != 0.00,

&apos;True&apos;,
&apos;False&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remove Non Prorated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RevRec_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RevRec Processed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rev_Recog__c</fullName>
        <label>Rev Recog</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RevenueRecognitionEndDateNew__c</fullName>
        <label>Revenue Recognition End Date New</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RevenueRecognitionRuleNew__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Revenue Recognition Rule New</label>
        <referenceTo>Revenue_Recognition_Rule__c</referenceTo>
        <relationshipLabel>Invoice Lines (Revenue Recognition Rule New)</relationshipLabel>
        <relationshipName>Invoice_Lines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revenue_Recognition_Date__c</fullName>
        <label>Revenue Recognition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revenue_Recognition_End_Date__c</fullName>
        <label>Revenue Recognition End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revenue_Recognition_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Revenue Recognition Rule</label>
        <referenceTo>Revenue_Recognition_Rule__c</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revenue_Recognition_Start_Date__c</fullName>
        <label>Revenue Recognition Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revenue_Recognition_Status__c</fullName>
        <label>Revenue Recognition Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Revenue_Recognition_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Run_Rev_Rec__c</fullName>
        <label>Run Rev Rec?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>569 Invoice Lines</fullName>
                </value>
                <value>
                    <fullName>425 Invoice Lines Negative</fullName>
                </value>
                <value>
                    <fullName>Invoice Lines</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SF_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SF Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SchedulerId__c</fullName>
        <formula>Invoice__r.Invoice_Run_Created_By__r.Invoice_Run_Scheduler__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduler Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence_No__c</fullName>
        <description>This holds the Sequence in which the charges are created and appears on the pdf files.</description>
        <inlineHelpText>This holds the Sequence in which the charges are created and appears on the pdf files.</inlineHelpText>
        <label>Sl No</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_End_Date__c</fullName>
        <description>The ending date for the period of calculation of this charge. Applicable only to Recurring Charges.</description>
        <inlineHelpText>The ending date for the period of calculation of this charge. Applicable only to Recurring Charges.</inlineHelpText>
        <label>Charge End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Start_Date__c</fullName>
        <description>The starting date for the period of calculation of this charge. Applicable only to Recurring Charges.</description>
        <inlineHelpText>The starting date for the period of calculation of this charge. Applicable only to Recurring Charges.</inlineHelpText>
        <label>Charge Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Split_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Split Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Posted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription_Product__c</fullName>
        <formula>Job_Rate_Plan_Charge__r.Subscription_Product__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscription Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax_City__c</fullName>
        <label>Tax City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Code__c</fullName>
        <label>Tax Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Country__c</fullName>
        <label>Tax Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_State__c</fullName>
        <label>Tax State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Street__c</fullName>
        <label>Tax Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Zip_Code__c</fullName>
        <label>Tax Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Line_Amount__c</fullName>
        <description>Subtotal - Discount + VAT + Tax</description>
        <formula>Line_Amount__c - Discount_Value__c + VAT__c + Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Subtotal - Discount + VAT + Tax</inlineHelpText>
        <label>Total Line Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Of_Measurement__c</fullName>
        <label>UOM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>UOM</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UsageFrequency__c</fullName>
        <label>Usage Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Price_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Usage_Frequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>VAT__c</fullName>
        <label>VAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vessel_Name__c</fullName>
        <description>Vessel Name = Shipping Account Name</description>
        <formula>Job__r.Shipping_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Vessel Name = Shipping Account Name</inlineHelpText>
        <label>Vessel Name</label>
        <type>Text</type>
    </fields>
    <label>Invoice Line</label>
    <nameField>
        <label>Line Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>